check_5.out
warning: adapteros-lora-kernel-mtl@0.13.1: Kernel hash: 165822cedec712da19cfcddeb028f7e49d15c5c4f7587e550c180ee704f92ffa
warning: adapteros-lora-kernel-mtl@0.13.1: Kernel aos_kernels.metal not found, skipping
    Checking adapteros-boot v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-boot)
warning: adapteros-lora-mlx-ffi@0.13.1: Found MLX at: /opt/homebrew (0.30.3)
warning: adapteros-lora-mlx-ffi@0.13.1: =========================================================
warning: adapteros-lora-mlx-ffi@0.13.1: MLX BACKEND: Real C++ FFI (feature 'mlx' enabled)
warning: adapteros-lora-mlx-ffi@0.13.1: MLX version: 0.30.3
warning: adapteros-lora-mlx-ffi@0.13.1: Include path: /opt/homebrew/include
warning: adapteros-lora-mlx-ffi@0.13.1: Library path: /opt/homebrew/lib
warning: adapteros-lora-mlx-ffi@0.13.1: Compatibility probe: PASSED
warning: adapteros-lora-mlx-ffi@0.13.1: =========================================================
warning: adapteros-lora-kernel-coreml@0.13.1: CoreML bridge compiled successfully
warning: adapteros-lora-kernel-coreml@0.13.1: Swift CoreML bridge compiled successfully
    Checking adapteros-tui v0.2.0 (/Users/star/Dev/adapter-os/crates/adapteros-tui)
    Checking adapteros-benchmarks v0.13.1 (/Users/star/Dev/adapter-os/tests/benchmark)
warning: variant `Network` is never constructed
   --> crates/adapteros-core/src/error_macros.rs:389:9
    |
387 |     enum LocalError {
    |          ---------- variant in this enum
388 |         Parse(String),
389 |         Network(String),
    |         ^^^^^^^
    |
    = note: `LocalError` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `adapteros-core` (lib test) generated 1 warning
warning: unused import: `KmsProvider`
  --> crates/adapteros-crypto/tests/kms_security.rs:12:84
   |
12 | use adapteros_crypto::providers::kms::{KmsProviderType, KmsConfig, KmsCredentials, KmsProvider, KmsManager};
   |                                                                                    ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `adapteros-crypto` (test "kms_security") generated 1 warning
    Checking adapteros-lora-worker v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-lora-worker)
    Checking adapteros-secd v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-secd)
    Checking adapteros-federation v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-federation)
    Checking adapteros-verify v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-verify)
    Checking adapteros-replay v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-replay)
    Checking adapteros-orchestrator v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-orchestrator)
    Checking adapteros-api v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-api)
    Checking adapteros-node v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-node)
    Checking xtask v0.13.1 (/Users/star/Dev/adapter-os/xtask)
    Checking adapteros-server-api v0.4.0 (/Users/star/Dev/adapter-os/crates/adapteros-server-api)
    Checking adapteros-cli v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-cli)
    Checking adapteros-server v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-server)
    Checking adapteros-e2e v0.2.0 (/Users/star/Dev/adapter-os/crates/adapteros-e2e)
error[E0609]: no field `status` on type `(StatusCode, axum::Json<adapteros_api_types::ErrorResponse>)`
   --> crates/adapteros-server-api/tests/tenant_isolation_tests.rs:538:36
    |
538 |         Err(err) => assert_eq!(err.status, StatusCode::NOT_FOUND),
    |                                    ^^^^^^ unknown field
    |
    = note: available fields are: `0`, `1`

error[E0609]: no field `status` on type `(StatusCode, axum::Json<adapteros_api_types::ErrorResponse>)`
   --> crates/adapteros-server-api/tests/tenant_isolation_tests.rs:566:36
    |
566 |         Err(err) => assert_eq!(err.status, StatusCode::FORBIDDEN),
    |                                    ^^^^^^ unknown field
    |
    = note: available fields are: `0`, `1`

error[E0609]: no field `status` on type `(StatusCode, axum::Json<adapteros_api_types::ErrorResponse>)`
   --> crates/adapteros-server-api/tests/tenant_isolation_tests.rs:594:36
    |
594 |         Err(err) => assert_eq!(err.status, StatusCode::NOT_FOUND),
    |                                    ^^^^^^ unknown field
    |
    = note: available fields are: `0`, `1`

For more information about this error, try `rustc --explain E0609`.
error: could not compile `adapteros-server-api` (test "tenant_isolation_tests") due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
error[E0609]: no field `status` on type `(StatusCode, axum::Json<adapteros_api_types::ErrorResponse>)`
   --> crates/adapteros-server-api/tests/tenant_isolation_models.rs:344:21
    |
344 |                 err.status,
    |                     ^^^^^^ unknown field
    |
    = note: available fields are: `0`, `1`

error[E0609]: no field `status` on type `(StatusCode, axum::Json<adapteros_api_types::ErrorResponse>)`
   --> crates/adapteros-server-api/tests/tenant_isolation_models.rs:379:21
    |
379 |                 err.status,
    |                     ^^^^^^ unknown field
    |
    = note: available fields are: `0`, `1`

error[E0609]: no field `status` on type `(StatusCode, axum::Json<adapteros_api_types::ErrorResponse>)`
   --> crates/adapteros-server-api/tests/tenant_isolation_models.rs:414:21
    |
414 |                 err.status,
    |                     ^^^^^^ unknown field
    |
    = note: available fields are: `0`, `1`

error[E0609]: no field `status` on type `(StatusCode, axum::Json<adapteros_api_types::ErrorResponse>)`
   --> crates/adapteros-server-api/tests/tenant_isolation_models.rs:839:21
    |
839 |                 err.status,
    |                     ^^^^^^ unknown field
    |
    = note: available fields are: `0`, `1`

error[E0609]: no field `status` on type `(StatusCode, axum::Json<adapteros_api_types::ErrorResponse>)`
   --> crates/adapteros-server-api/tests/tenant_isolation_models.rs:966:21
    |
966 |                 err.status,
    |                     ^^^^^^ unknown field
    |
    = note: available fields are: `0`, `1`

error: could not compile `adapteros-server-api` (test "tenant_isolation_models") due to 5 previous errors
